assets/css/style.css
/* ... */
.service-container {
    display:flex;
    flex-direction: column;
    justify-content: center;
    border-radius: 25px;
    padding: 2em;
    width: 280px;
    flex: 0 0 280px;
    align-items: center;
    border: 1px solid lightgray;
    align-self: stretch; /* Force service containers to maintain equal height*/
}

.service-container p {
    flex: 1 1 auto;
    text-align: center;
}

.service-container .cta-btn {
	margin: 5px 0 0 0;
}

#service1 {
    background: rgb(255,255,255);
    background: linear-gradient(360deg, rgba(255,255,255,1) 92%, rgba(27, 94, 32, 1) 100%);
}

#service2 {
    margin: 20px 0;
    background: rgb(255,255,255);
    background: linear-gradient(360deg, rgba(255,255,255,1) 92%, rgba(255,193,7,1) 100%);
}

#service3 {
    background: rgb(255,255,255);
    background: linear-gradient(360deg, rgba(255,255,255,1) 92%, rgba(33,150,243,1) 100%);
}

/* End Services Section*/

/* Testimonials Section*/


.testimonials-container {
    width: 280px;
}

.testimonials-container blockquote {
    margin: 32px 0;
    padding: 0 1em;
}

#testimonial-name, #testimonial-company {
    display: block;
    font-weight: bold;
}

/* End Testimonials Section*/

/* About Section */

#about-container {
    width: 280px;
    padding: 0 1em;
}

#about-image-container {
    width: 280px;
    height: 280px;
    border-style: solid;
    border-color: #ccc;
    border-width: 1px;
    border-radius: 50%;
    margin: 1.5em auto 0 auto;
}

#about-image-bg {
    background: url('../images/matthew-shepherd.webp') no-repeat center center;
    height: 100%;
    border-radius: 50%;
}

/* End About Section */

/* Contact Section */

#connect-container {
    width: 280px;
    padding-bottom: 1.5em;
}

.social-link {
    display: inline-block;
    min-width: 250px;
    text-align: left;    
}

.social-link a:link, .social-link a:visited, .social-link a:active {
    color: #333;
    text-decoration: none;
}

.social-link img {
    position: relative;
    top: 12px;
    margin-right: 12px;
    filter: drop-shadow(5px 5px 5px #333);
}

.form-container {
    background-color: rgba(60, 60, 60, 0.2);
    display:flex;
    flex-direction: column;
    border-radius: 25px;
    padding: 2em 1.5em;
    margin-top: 1.5em;    
    width: 280px;
    flex: 1 1 440px;
    justify-content: space-between;
    align-items: center;    
}

.form-container form {
    text-align: left;
    width: 95%;
}

.form-center, .form-container label {
   display: block; 
}

.form-center {
    text-align: center;
}

.form-center .cta-btn {
    margin: 0;
}

.form-container .text-field {
    color: black;
    height: 25px;
    width: 100%;
    margin: 5px 0 20px 0;
    border: 1px solid #fafafa;
    border-radius: 15px; 
    padding: 0 0.5em;    
}

.form-container .textarea-field {
    color: black;
    height: 10em;
    width: 100%;
    margin: 5px 0 20px 0;
    border: 1px solid #fafafa;
    border-radius: 15px;
    padding: 0.5em 0.5em;
}

/* End Contact Section */

/* Footer Section */

footer {
    background: #005c10;
}

footer li {
    list-style-type: none;
}

footer li a {
    color: #fff;
    text-decoration: none;
}

footer li a:hover {
    color: #fff;
    text-decoration: underline;
}

#footer-top {
    width: 100%;
    padding: 0 0 1.5em 0;
}

#footer-top .cta-btn {
    margin-bottom: 1.5em;
}

#logo-tagline, #footer-bottom {
    color: #fff;
}

#logo-tagline img {
    margin-bottom: 1.5em;
}

#footer-links {
    padding: 1.5em 0 0 0;
    border-top: 1px solid #fff;
}

#footer-bottom {
    width: 100%;
    padding: 1.5em 0 0 0;
    border-top: 1px solid #fff;
}

#footer-bottom .social-icon {
    margin-right: 1.5em;
}

#footer-bottom .social-icon img {
    filter: drop-shadow(5px 5px 5px #000);
}

/* End Footer Section */

/* Tablet Portrait Styles */

@media only screen and (min-width: 600px) {

/* Tablet - General Layout */

header, section:not([id*="parallax"]) {
    width: 85%;
    margin: auto;
    text-align: center;
}

section[id^="parallax"] {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;  
}

section, #footer-top {
    display: flex;
    flex-direction: row;
    justify-content: center; 
    column-gap: 3.5em;
}

#services {
    column-gap: 2.5em;
    row-gap: 3.5em;
}

#footer-top {   
    align-items: flex-start;
}

header {
    padding: 0;
}

section {
    padding: 3.5em 0;
}

footer {
    padding: 3.5em 0 1.5em 0;
}

#hero {
    border-bottom: none;
}

#client-logos-container, #footer-links {
    border-top: none;
}

.mobile-divider {
    display: none;
}

/*  Tablet - Hero, Testimonial, Contact, Footer Divs Multi Column Section Widths */

#hero-text-container, #hero > div, #about-container, #about-image-outer, #logo-tagline, #footer-links {
    flex: 1 0 40%;
    margin: auto;
}

#footer-links {
    padding: 0;
    margin: 0 auto;
}

#hero-image {
    text-align: center;
}

#hero-text-container, #hero-text-container, #about-container, #about-image-outer {
    text-align: left;
}

#contact {
    flex-direction: row-reverse;
    justify-content: center;
    align-items: flex-start;
}

#connect-container, .form-container {
    text-align: left;
    margin: 0 auto;
    align-items: flex-start;
}

.form-container {
    flex: 1 0 280px;
    padding: 2em;
}

#connect-container {
    flex: 2 2 40%;
    padding: 2.5em;
}

/* Tablet - Client Logos & Testimonial Single Column Section Widths */

#client-logos-inner, .testimonials-container {
    width: 100%;
}
/* Tablet - End Client Logos & Testimonial Single Column Section Widths */

/* Tablet - Service Section */
#service2 {
    margin: 0;
}
/* Tablet - End Service Section */

/* Tablet - About Section */
#about-container, #about-image-outer {
    width: 40%;
}
/* Tablet - End About Section */

/* Tablet - Footer Section */
#footer-links li {
    display: inline;
    margin-right: 20px;
}
/* Tablet - End Footer Section */

}
/* ... */

